# ComplaintSummarizer

./: README.md  README_streamlit.md  streamlit_app.py
backend/: app.py  app2.py  app3.py  prompts.txt  pyproject.toml  requirements.txt
frontend/src/: App.css  App.js
frontend/src/components/: FileUpload.js  SummaryDisplay.js  TextSummarizer.js
